--- a/src/containers/ProductDetail/components/ProductOverview/style.css
+++ b/src/containers/ProductDetail/components/ProductOverview/style.css
@@ -56,7 +56,7 @@
 .productOverview__purchase {
   padding-left: 15px;
   display: -webkit-box;
-  margin-top: 0;
+  border-bottom: 1px solid #f0f0f0;
   height: 50px;
   -webkit-box-pack: justify;
   background: url("https://www.dpfile.com/mod/app-m-tuangou/1.3.79/css/img/repeat-x.png")
