--- a/src/containers/Search/components/PopularSearch/style.css
+++ b/src/containers/Search/components/PopularSearch/style.css
@@ -21,24 +21,6 @@
   text-align: center;
   padding: 0;
   margin: 0;
-}
-
-.popularSearch__item:nth-child(1),
-.popularSearch__item:nth-child(2),
-.popularSearch__item:nth-child(4),
-.popularSearch__item:nth-child(5) {
-  background-image: linear-gradient(0, #e1e1e1, #e1e1e1 50%, transparent 50%),
-    linear-gradient(90deg, #e1e1e1, #e1e1e1 50%, transparent 50%);
-  background-position-x: right, right;
-  background-position-y: bottom, top;
-  background-size: 100% 1px, 1px 100%;
-  background-repeat: no-repeat;
-}
-
-.popularSearch__item:nth-child(7),
-.popularSearch__item:nth-child(8) {
-  background-image: linear-gradient(90deg,#e1e1e1,#e1e1e1 50%,transparent 50%);
-  background-position: top right;
-  background-size: 1px 100%;
-  background-repeat: no-repeat;
+  border: 1px solid #f0f0f0;
+  box-sizing: border-box;
 }
