--- a/src/containers/Search/components/SearchHistory/style.css
+++ b/src/containers/Search/components/SearchHistory/style.css
@@ -19,6 +19,7 @@
 .searchHistory__item {
   display: block;
   color: #323232;
+  border-bottom: 1px solid #f0f0f0;
   height: 48px;
   line-height: 48px;
   background-color: #fff;
